--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "ejs": "*",
     "express3-ejs-layout" : "*",
     "express-validator" : "*",
-    "jsdom" : "*"
+    "jsdom" : "*",
+    "phantom":"*",
+    "mysql" : "*"
   }
 }
